2006-04-07  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems/gem_commands.rb (Gem::RDocCommand::execute): Added
	RI option to the rdoc subcommand.

2006-04-05  Jim Weirich  <jim@weirichhouse.org>

	* test/test_parse_commands.rb
	(TestParseCommands::test_parsing_update_options): Fixed unit tests
	to assert that the install dir is expanded.

	* lib/rubygems/doc_manager.rb (Gem::DocManager::generate_ri):
	Break out from generate_rdoc to support installing all RI docs
	first.

	* lib/rubygems/gem_commands.rb
	(Gem::InstallUpdateOptions::add_install_update_options): Expanded
	repository directory to absolute path.
	(Gem::InstallCommand::execute): Make sure that *all* of the RI
	documents are generated before generating any RDocs (due to a bug
	in the RDoc library).

	* lib/rubygems/installer.rb (Gem::ExtExtConfBuilder::self): Fixed
	typo in ExtExtConfBuilder that prevented C based gems to install.
	(Gem::ExtExtConfBuilder::self): Installed patch to prevent the
	overriding of target_prefix in native extensions (thanks to Aaron
	Patterson for the patch).

2006-04-04  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems/rubygems_version.rb (Gem): Bumped to version
	0.8.11.10.

	* lib/rubygems/incremental_fetcher.rb
	(Gem::IncrementalFetcher::update_cache): Now falls back to bulk
	updates if the number of gems if over 50.

	* lib/rubygems/remote_installer.rb
	(Gem::RemoteSourceFetcher::source_index): Added "bulk" to the
	update message to differentiate it from the incremental message.

	* lib/rubygems/specification.rb
	(Gem::Specification::Specification): Modified to add dashes to
	gemspecs generated under Ruby 1.8.3.  This makes it easier to run
	RubyGems on a 1.8.2 system.

2006-04-01  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems/doc_manager.rb (Gem::DocManager::run_rdoc): Changed
	exception handler to print error message if document generation
	fails, but then to continue with the rest of the installation.